Switch CI to LTS versions of Java